--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -1369,6 +1369,7 @@
     "learnMore": "Více info",
     "learnMoreAria": "Více informací o cookies",
     "expandAria": "Zobrazit možnosti cookies",
-    "minimalLabel": "Cookies"
+    "minimalLabel": "Cookies",
+    "resetBanner": "Obnovit banner cookies"
   }
 }
