--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -662,7 +662,7 @@
     },
     "toc": {
       "title": "Table of Contents",
-      "codeOfConduct": "Code of Conduct",
+      "codeOfConduct": "CoC",
       "privacyPolicy": "Privacy Policy",
       "termsOfService": "Terms of Service"
     },
@@ -1331,6 +1331,19 @@
     "sendError": "Failed to send newsletter. Please try again."
   },
   "attributions": {
+    "giants": {
+      "headline": "We stand on the shoulders of giants",
+      "subline": "Built on best-in-class infrastructure and tools.",
+      "cloud": "Cloud",
+      "database": "Database",
+      "storage": "Object storage (photos)",
+      "emails": "Emails",
+      "bugReporting": "Bug reporting",
+      "botProtection": "Bot protection",
+      "vcs": "VCS",
+      "cicdRunners": "CI/CD Runners",
+      "thankYou": "Thank you to everyone behind services like these - we're really grateful for what you build and run."
+    },
     "title": "Attributions",
     "subtitle": "Open source technologies and libraries used in this project",
     "intro": "This website is built using open source technologies. We are grateful to the developers and maintainers of these projects. Below is a list of the main technologies and their licenses.",
@@ -1339,7 +1352,7 @@
       "framework": "Framework & Core",
       "state": "State Management",
       "styling": "Styling",
-      "database": "Database",
+      "database": "Database & ORM",
       "i18n": "Internationalization",
       "auth": "Authentication",
       "utilities": "Utilities",
