refactor: enhance date formatting by utilizing utility functions

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -147,7 +147,7 @@
       "testBannerTitle": "Testovací e-mail",
       "testBannerMessage": "Tento newsletter byl odeslán jako test",
       "updateLabel": "Update {number}",
-      "sentOn": "Odesláno {sentDate, date, long}"
+      "sentOn": "Odesláno {sentDate}"
     }
   },
   "events": {
