refactor: rename routes event -> events and user -> users

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -184,7 +184,7 @@
     "attendingCount": "{count} účastníků",
     "andMore": "+{count} dalších",
     "beFirst": "Buďte první!",
-    "rsvpOnBonfire": "Registrace na Bonfire",
+    "rsvpOnBonfire": "RSVP",
     "orRegisterVia": "Nebo se registruj přes:",
     "onePrivateRsvp": "1 soukromý",
     "multiplePrivateRsvps": "{count} soukromých"
