--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -184,7 +184,7 @@
     "attendingCount": "{count} attending",
     "andMore": "+{count} more",
     "beFirst": "Be first to RSVP!",
-    "rsvpOnBonfire": "Register on Bonfire",
+    "rsvpOnBonfire": "RSVP",
     "orRegisterVia": "Or register via:",
     "onePrivateRsvp": "1 private",
     "multiplePrivateRsvps": "{count} private"
