refactor: update EventDetailClient layout and improve dynamic route formatting

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -180,7 +180,7 @@
     },
     "register": "Registrace přes:",
     "illBeThere": "Zúčastním se",
-    "youreGoing": "Jdeš na to",
+    "youreGoing": "Jsi na registraci",
     "attendingCount": "{count} účastníků",
     "andMore": "+{count} dalších",
     "beFirst": "Buďte první!",
