feat: enhance RSVP section with public attendee display and improve watch later button functionality

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -183,6 +183,10 @@
     "shareEvent": "Sdílet tuto akci",
     "copyLink": "Kopírovat odkaz",
     "copied": "Zkopírováno!",
+    "attendingLabel": "Dorazí:",
+    "attendingMore": "+{count} dalších",
+    "privateOnly": "Soukromí účastníci",
+    "anonymous": "Anonym",
     "addToCalendar": "Přidat do kalendáře",
     "googleCalendar": "Google Calendar",
     "downloadIcs": "Stáhnout .ics",
