--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -183,6 +183,10 @@
     "shareEvent": "Share this event",
     "copyLink": "Copy link",
     "copied": "Copied!",
+    "attendingLabel": "Attending:",
+    "attendingMore": "+{count} more",
+    "privateOnly": "Private attendees",
+    "anonymous": "Anonymous",
     "addToCalendar": "Add to calendar",
     "googleCalendar": "Google Calendar",
     "downloadIcs": "Download .ics",
