feat: add watch later functionality with animations and improved accessibility in LikeBoostButtons and ShareMenu components

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -1007,6 +1007,7 @@
     "boostHint": "Boostování je pouze pro členy.",
     "rsvpHint": "Přihlaste se a dejte ostatním vědět, že přijdete.",
     "sessionExpiredHint": "Platnost relace vypršela. Přihlaste se znovu.",
+    "watchLaterHint": "Přihlaste se a uložte si video na později.",
     "termsPrefix": "Pokračováním souhlasíte s ",
     "termsLink": "podmínkami a zpracováním osobních údajů",
     "termsSuffix": ".",
