feat: update ShouldersOfGiants and ThirdPartyPageContent components with enhanced styling and additional technology entries, improving visual appeal and information completeness

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -1393,7 +1393,7 @@
       "subline": "Postaveno na špičkové infrastruktuře a nástrojích.",
       "cloud": "Cloud",
       "database": "Databáze",
-      "storage": "Úložiště objektů (fotky)",
+      "storage": "Úložiště objektů",
       "emails": "E-maily",
       "bugReporting": "Hlášení chyb",
       "botProtection": "Ochrana proti botům",
